--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,6 +32,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
       - name: Move dist contents to root
         run: |
           mv dist/* ./
